--- a/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
+++ b/docs/BatchRunGettingStarted/RepastBatchRunsGettingStarted.tex
@@ -36,7 +36,7 @@
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
 \title{Repast Simphony Batch Runs Getting Started}
-\author{Nick Collier  - Repast Development Team}
+\author{Nick Collier, Jonathan Ozik  - Repast Development Team}
 %\date{\today}                                           % Activate to display a given date or no date
 
 \begin{document} 
